<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="espinner">
        <item>ONE Joan</item>
        <item>TWO</item>
        <item>THREE</item>
        <item>FOUR</item>
    </string-array>

    <string name="app_name">Personal Shapes</string>

    <string name="title_screen01">Login</string>
    <string name="title_screen02_register">Registro</string>
    <string name="title_screen02_profile">Perfil</string>
    <string name="title_screen03">Menú principal</string>
    <string name="title_screen04">Lista de capas</string>
    <string name="title_screen05">Creación de capa</string>
    <string name="title_screen07">Mapa</string>
    <string name="title_screen12">Eventos</string>
    <string name="title_screen13">Amigos</string>
    <string name="title_screen15">Creación de evento</string>
    <string name="title_screen17">Buscador de amigos</string>
    <string name="title_screen18">Solicitudes Amigos</string>
    <string name="title_screen19">Buscador de lugares</string>
    <string name="title_screen21">Coordenadas</string>
    <string name="title_screen22">Mapa</string>
    <string name="title_screen23">Solicitudes Eventos</string>

    <string name="header_privatefields">Campos privados:</string>
    <string name="header_publicfields">Campos públicos:</string>
    <string name="header_image">Imagen:</string>
    
    <!-- tipos de elemento: label -->
    <string name="label_user">Usuario:</string>
    <string name="label_pass">Contraseña:</string>
    <string name="label_passrepeat">Repetir:</string>
    <string name="label_name">Nombre:</string>
    <string name="label_country">País:</string>
    <string name="label_gender">Sexo:</string>
    <string name="label_image">Image:</string>
    <string name="label_email">Email:</string>
    <string name="label_phone">Teléfono:</string>

    <!-- tipos de elemento: desc -->
    <string name="desc_image">Image</string>

    <string name="title">Login form</string>
    <string name="registration">Registration form</string>
    <string name="app_name">Login App</string>
    <string name="Exit">Exit</string>
    <string name="Clear">Clear</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="Back">Back</string>
    <string name="app_name">ADM_Personal_Shapes</string>
    <string name="action_settings">Settings</string>
    <string name="button_edit">Editar</string>
    <string name="button_share">Compartir</string>
    <string name="button_save">Guardar</string>
    <string name="button_remove">Eliminar</string>
    <string name="edit_name">Nombre</string>
    <string name="textview_description">Descripción:</string>
    <string name="edittext_coordinates">Coordenadas</string>
    <string name="edit_latitude">Latitud</string>
    <string name="edit_longitude">Longitud</string>
    <string name="gallery_button">Select image to be sent</string>
    <string name="title_loginform">Login form</string>
    <string name="title_registrationform">Registration form</string>
    <string name="label_exit">Exit</string>
    <string name="label_clear">Clear</string>
    <string name="label_register">Register</string>
    <string name="label_login">Login</string>
    <string name="label_back">Back</string>
    <string name="label_settings">Settings</string>
    <string name="label_edit">Editar</string>
    <string name="label_share">Compartir</string>
    <string name="label_save">Guardar</string>
    <string name="label_remove">Eliminar</string>
    <string name="label_description">Descripción</string>
    <string name="label_coordinates">Coordenadas</string>
    <string name="label_latitude">Latitud</string>
    <string name="label_longitude">Longitud</string>
    <string name="label_profile">Perfil</string>

    <!-- screen01 -->
    <string name="textview_login">Login:</string>
    <string name="button_login">Login</string>
    <string name="button_clear">Limpiar</string>
    <string name="button_register">Registro</string>
    <string name="button_skip">Omitir</string>
    
    
    <string name="edit_login">Login (Usuario Existente)</string>
    <string name="edit_register">Registro (Nuevo Usuario)</string>
    <string name="edit_password">Contraseña</string>
    <string name="edit_new_user">Usuario</string>
    <string name="edit_new_password">Contraseña</string>
    <string name="edit_repeat_new_password">Contraseña</string>
    <string name="hint_entername">Please enter your username</string>
    <string name="hint_pasword">Please enter your password</string>
    <string name="checkbox_remember">Remember me</string>

    <!-- screen02 -->
    <string name="textview_username">Usuario:</string>
    <string name="textview_password">Contraseña:</string>
    <string name="textview_passwordrepeat">Repetir:</string>
    <string name="textview_email">Email:</string>
    <string name="textview_phone">Teléfono:</string>
    <string name="textview_name">Nombre:</string>
    <string name="textview_gender">Sexo:</string>
    <string name="textview_country">País:</string>
    <string name="button_update">Actualizar</string>
    
    <!-- screen03 -->
	<string name="button_profile">Perfil</string>
    <string name="button_create">Crear</string>
    <string name="button_list">Lista</string>
    <string name="button_map">Mapa</string>
    <string name="button_friends">Amigos</string>
    <string name="button_events">Eventos</string>
    <string name="button_search">Buscador</string>
    <string name="drawer_open">Menú Abierto</string>
    <string name="drawer_close">Menú Cerrado</string>

    <!-- screen04 -->
    <string name="tab_places">Lugares</string>
    <string name="tab_plots">Parcelas</string>
    <string name="tab_layers">Capas</string>
    <string name="button_types">Tipos</string>

    <string-array name="layers">
        <item value="CP">Codigos Postales</item>
        <item value="FU">Fuentes</item>
        <item value="BI">Bicis</item>
        <item value="PK">Numero de Edificio</item>
    </string-array>

    <!-- screen05 -->
    <string name="edittext_type">Tipo</string>
    <string name="spinner_placetype">Seleccione un tipo</string>
    <string name="button_delete">Eliminar</string>
    <string name="button_map">Mapa</string>
    <string name="button_gps_position">Posición GPS</string>
    <string name="button_fillqr">Rellenar desde QR</string>
    <string name="button_removelastpoint">Eliminar último punto</string>
    <string name="button_setpoint">Fijar punto</string>
    <string name="edit_category">Categoria:</string>
    <string name="textview_shapetype">Tipo de forma:</string>
    <string name="textview_shapedata">Datos:</string>
    <string name="textview_placetype">Tipo:</string>
    <string name="radiobutton_place">Lugar</string>
    <string name="radiobutton_plot">Parcela</string>
    <string name="textview_shapename">Nombre:</string>
    <string name="edittext_situation">Situación</string>
    <string name="edittext_selectoption">Seleccione una opción</string>
    <string name="action_settings">Seleccione una opción</string>
    <string name="button_coordinates">Coordenadas</string>
    <string name="button_cancel">Cancelar</string>
    
    <!-- screen13 -->
    <string name="textview_pendingrequests">Solicitudes pendientes:</string>
    <string name="textview_yourfriendslist">Tu lista de amigos:</string>
    <string name="button_send">Enviar</string>
    
    <!-- screen21 -->
    <string name="button_use">Usar</string>

    <!-- screen21 -->
    <string name="button_send">Enviar</string>

    <!-- screen19 -->
    <string name="edittext_pendingrequest">Solicitudes pendientes:</string>
    <string name="edittext_numberpendingrequest">0</string>
    <string name="edittext_friendslist">Lista de amigos</string>
    <string name="edittext_shareoptions">Opciones de compartir</string>
    <string name="button_personalplaces">PersonalPlaces</string>
    <string name="button_socialnetworks">Redes sociales</string>
    <string name="button_addfriend">Añadir amigo</string>

    <!-- screen17 -->
    <string name="edittext_addnewfriend">Añadir nuevo amigo</string>
    <string name="edittext_results">Resultados</string>
    <string name="button_searchfriends">Buscar</string>

    <!-- screen18 -->
    <string name="button_reject">Rechazar</string>
    <!-- screen19 -->
    <string name="edittext_searchplace">Buscar un lugar:</string>
    <string name="button_viewdata">Ver datos</string>

    <!-- screen22 -->
    <string name="edittext_events">Eventos</string>
    <string name="button_newevent">Crear Evento</string>
    <string name="button_fixed">Fijar</string>
    <string name="button_gps">GPS</string>

    <!-- screen18 -->


    <!-- screen15 -->
    <string name="edittext_creator">Creador</string>
    <string name="edittext_personalplace">Lugar personal</string>
    <string name="edittext_notification">Notificara cuando llege a:</string>
    <string name="edittext_total">Total:</string>
    <string name="edittext_yes">Si:</string>
    <string name="edittext_no">No:</string>
    <string name="edit_numbernotification">0</string>
    <string name="edittext_numbertotal">0</string>
    <string name="edittext_numberyes">0</string>
    <string name="edittext_numberno">0</string>
    <string name="edittext_title">Título</string>
    <string name="button_acept">Aceptar</string>
    <string name="edittext_date">Fecha</string>
    <string name="button_changethedate">Cambia la fecha</string>
    <string name="edittext_time">Hora</string>
    <string name="button_changethehour">Cambia la hora</string>

    <!-- screen19 -->

    <string name="searchname">Search Names</string>
    <string name="search_label">Search</string>
    <string name="search_hint">Search Names</string>

    <!-- menu_screen7 -->

    <string name="options">Opciones</string>
    <string name="layers">Capas</string>
    <string name="plots">Parcelas</string>
    <string name="personalplaces">Lugares Personales</string>
    <string name="alert_dialog_ok">OK</string>

    <!-- menu_image -->
    <string name="intro">Capture a picture to crop!</string>
    <string name="picture">Picture</string>
    <string name="capture">Launch Camera</string>

    <!-- menu_screen07 -->
    <string name="options">Opciones</string>
    <string name="help">Ayuda</string>
    <!-- menu_generaltopright -->
    <string name="SubMnuOpc1">Comentanos y danos tu VOTO</string>
    <string name="SubMnuOpc2">Compartela con tus contactos</string>
    <string name="SubMnuOpc3">Agreganos y llamanos</string>

</resources>