<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:weightSum="3" >

            <Button
                android:id="@+id/button_gps"
                style="@style/button_type_02"
                android:layout_weight="1"
                android:background="@drawable/button_type_01"
                android:text="@string/button_gps" />

            <Button
                android:id="@+id/button_fix"
                style="@style/button_type_02"
                android:layout_weight="1"
                android:background="@drawable/button_type_01"
                android:text="@string/button_fixed" />

            <Button
                android:id="@+id/button_delete"
                style="@style/button_type_02"
                android:layout_weight="1"
                android:background="@drawable/button_type_01"
                android:text="@string/button_delete" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/buttons">

            <WebView
                android:id="@+id/mapview_map"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />
        </LinearLayout>

    </RelativeLayout>

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#111"
        android:choiceMode="singleChoice"
        android:paddingLeft="10dp" />

</android.support.v4.widget.DrawerLayout>